force-app/queue-bot/default/objects/Group_Member__c/fields/Telegram_Username__c.field-meta.xml
<CustomField>
    <fullName>Telegram_Username__c</fullName>
    <label>Telegram Username</label>
    <length>20</length>
    <type>Text</type>
</CustomField>