force-app/queue-bot/default/objects/Group_Member__c/fields/VK_Username__c.field-meta.xml
<CustomField>
    <fullName>VK_Username__c</fullName>
    <label>VK Username</label>
    <length>50</length>
    <type>Text</type>
</CustomField>