force-app/queue-bot/default/objects/Group_Member__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Telegram_Username__c</columns>
    <columns>VK_Username__c</columns>
    <columns>Sub_Group__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>